update: correct typos and rephrase the text

--- a/tex/sections/concept.tex
+++ b/tex/sections/concept.tex
@@ -1,8 +1,8 @@
 ﻿\chapter{Concept}
  
-Previous work on individual differences \citep{Franke_2016} has focused on differences in underlying pragmatic reasoning tendencies. However, participants with the same underlying pragmatic tendencies may underperform based on the information in the problem that they pay attention to. Take for example the hypothesis we saw in \autoref{sec:rsa}, not paying attention to the Distractor would mean that the problem simply becomes unsolvable. Therefore, cognitive abilities such as attention and working memory are most likely not the only features contributing to the performance of participants in these tasks.
+Previous work on individual differences \citep{Franke_2016} has focused on variations in underlying pragmatic reasoning tendencies. However, participants with similar underlying pragmatic tendencies may underperform based on the information in the problem that they pay attention to. Take for example the hypothesis we saw in \autoref{sec:rsa}, not paying attention to the Distractor would mean that the problem simply becomes unsolvable. Therefore, cognitive abilities such as attention and working memory are most likely not the only features contributing to the performance of participants in these tasks.
 
-This thesis aims to shed light on the realm of where the attention is spent during the pragmatic reasoning problem-solving task. And the eye tracking data will be used to investigate this. 
+This thesis aims to shed light on the realm of where the attention is spent during the pragmatic reasoning problem-solving task. And the eye-tracking data will be used to investigate this. 
 
 \section{Research Questions}
 \label{sec:research_questions}
@@ -17,14 +17,14 @@ As we discussed in \autoref{sec:rsa}, the Distractor in the hypothesis is a cruc
 
 \subsubsection{Research Hypothesis 2}
 \label{sec:h2}
-The second research question is about the messages that are available to the participants. The second research hypothesis is: Proportional time on available messages is positively associated with accuracy on Simple trials. This hypothesis is mainly based on the idea that while the Unambiguous trials can be solved without considering the available messages, the Simple ones require one to consider the available messages.
+The second research question is about the messages that are available to the participants. The second research hypothesis is: Proportional time on available messages is positively associated with accuracy on Simple trials. This hypothesis is based on the idea that while the Unambiguous trials can be solved without considering the available messages, the Simple ones require one to consider the available messages.
 
-In addition, the Complex trials can be solved without looking at the available messages at all. Take for example the trial in \autoref{fig:complex}. Taking into account the availalbe messages the following correspondance can be built: ``circle'' -- Competitor (blue circle), ``square'' -- Distractor (green square) and ``blue'' -- Target (blue square). However, if one does not consider the available messages, they can build a similar correspondence: ``circle'' -- Competitor (blue circle), ``green'' -- Distractor(green square) and ``blue'' or ``square'' -- Target (blue square). In both cases the message ``blue'' corresponds to the Target.
+In addition, the Complex trials can be solved without looking at the available messages at all. For example, in the trial in \autoref{fig:complex}. Taking into account the available messages the following correspondence can be built: ``circle'' -- Competitor (blue circle), ``square'' -- Distractor (green square) and ``blue'' -- Target (blue square). However, if one does not consider the available messages, they can build a similar correspondence: ``circle'' -- Competitor (blue circle), ``green'' -- Distractor(green square) and ``blue'' or ``square'' -- Target (blue square). In both cases the message ``blue'' corresponds to the Target.
 
 \subsection{Estimating the Likelihood}
 \label{sec:likelihood}
 
-Because Complex trials require one to consider the Ditractor, but Simple trials do not necessarily, and because Simple trials require one to consider the available messages, but Complex trials do not, it is possible that accurate participants have different attention profiles in Simple and Complex trials. Therefore, we would like to do a slightly alternative analysis, estimating the likelihood directly instead of trying to estimate the posterior. In order to realize this, we will only take the correctly solved trials into account and predict the probability of a each fixation (gaze point) to be on the area of interest.
+Because Complex trials require one to consider the Distractor, while Simple trials do not, and because Simple trials require one to consider the available messages, while Complex trials do not, it is possible that accurate participants have different attention profiles in Simple and Complex trials. Therefore, we would like to do a slightly alternative analysis, estimating the likelihood directly instead of trying to estimate the posterior. In order to realize this, we will only take the correctly solved trials into account and predict the probability of a each fixation (gaze point) to be on the area of interest.
 
 \subsubsection{Research Hypothesis 3}
 \label{sec:h3}
