--- a/tex/sections/conclusion.tex
+++ b/tex/sections/conclusion.tex
@@ -4,9 +4,9 @@
 \section{Conclusion}
 \label{sec:conclusion}
 
-In this thesis we looked at the research question from a few different sides. The raw pairwise correlations, the model to predict whether a given trial would be solved correctly, then the models that describe the likelihoods of gaze points given that a trial was solved correctly and the distributions of features based on the labels. All of them suggest a similar picture. 
+In this thesis, we examined the research question from a few different sides. The raw pairwise correlations, the model to predict whether a given trial would be solved correctly, then the models that describe the likelihoods of gaze points given that a trial was solved correctly and the distributions of features based on the labels. All of them suggest a similar picture. 
 
-Although participants seem to grasp the problem in a similar way, their answers still differ quite a lot. We saw this from the the fact that the Distractor did not turn out to be associated with accuracy, even though it is a very important piece of information for the Complex trials. So participants fail the trials not because they miss an important piece of information as we hypothesized in \autoref{sec:rsa}, where we showed that not looking at the Distractor would make the Complex condition unsolvable. 
+Although participants seem to grasp the problem in a similar way, their answers still differ quite a lot. We saw this from the the fact that the Distractor did not turn out to be associated with accuracy, even though it is a very important piece of information for the Complex trials. Thus, participants fail the trials not because they miss an important piece of information as we hypothesized in \autoref{sec:rsa}, where we showed that not looking at the Distractor would make the Complex condition unsolvable. 
 
 Now to match this to the multiple findings that the proportional time on available messages is positively associated with accuracy, we will make the following assumption. Participants looking more at the bank of available messages might indicate not just scanning the available messages, but also matching them with the objects, which can be seen as the reasoning process for reference games. Therefore, increase in proportional time on available messages might indicate that the participants are (recursively) reasoning about the objects and the messages. And a deeper reasoning process would lead to a higher chance of solving the trial correctly. Hence, a small increase in the proportional time on available messages would be enough to conclude a deeper reasoning process.
 
@@ -17,7 +17,7 @@ Now to match this to the multiple findings that the proportional time on availab
 
 \subsection{Scanpaths}
 \label{sec:general-discussion:scanpaths}
-In this study we did not take into account the order of the gaze points at all. However, the scanpath by itself includes this information. We were unable to come up with a good strategy how one could encode the scanpath in a way that would be useful and feasible for the analysis. The scanpaths are not fixed length, posing a problem that every entry would be of a different length which would make it impossible to use them in a model. One idea could be to use RNNs to analyse the scanpaths, however, this would require a lot of data and a lot of tuning. We did a few attempts in training CNNs on the generated plots of the scanpaths, however, the results were not promising and due to low interpretability of the model and time constraints we decided to focus on the more traditional features.
+In this study, did not account for  the order of the gaze points. However, the scanpath by itself includes this information. We were unable to come up with a good strategy how one could encode the scanpath in a way that would be useful and feasible for the analysis. The scanpaths are not fixed length, posing a problem that every entry would be of a different length which would make it impossible to use them in a model. One idea could be to use RNNs to analyse the scanpaths, however, this would require a lot of data and a lot of tuning. We did a few attempts in training CNNs on the generated plots of the scanpaths, however, the results were not promising and due to low interpretability of the model and time constraints we decided to focus on the more traditional features.
 
 \subsection{Peripheral Vision}
 \label{sec:general-discussion:attention-and-eye-tracking}
@@ -30,9 +30,9 @@ We only implemented features that describe proportional time spent on the area o
 
 \subsection{Proportional Eye Tracking Features}
 \label{sec:general-discussion:proportional-eye-tracking-features}
-We suspect that the proportional eye tracking features might be influence by the very last look at one of the objects. Therefore, making them good predictors of accuracy, as we saw in \autoref{sec:accuracy_model} or \autoref{sec:pairwise_corr}. There Competitor and Distractor turned out decisive for the accuracy of the predictions. This indicates that people look more at the object they would choose. As for the future work, one should consider trimming the last saccade before the decision, this should make the proportional features more reliable. On the other hand, if this does not solve the issue, this would indicate that people tend to make a decision not in the end of the trial. This would be also be an interesting finding.
+We suspect that the proportional eye tracking features might be influence by the very last look at one of the objects. Therefore, making them good predictors of accuracy, as we saw in \autoref{sec:accuracy_model} or \autoref{sec:pairwise_corr}. The Competitor and Distractor turned out to be decisive for the accuracy of the predictions. This indicates that people look more at the object they would choose. As for the future work, one should consider trimming the last saccade before the decision, this should make the proportional features more reliable. On the other hand, if this does not solve the issue, this would indicate that people tend to make a decision not in the end of the trial. This would be also be an interesting finding.
 
-The way we assigned the fixations to the stimuli is not optimal as we clearly disregarded the timings of the gaze predictions as well as added some of the gaze points that are from saccades rather than from fixations. Both of the problems could have been solved with a fixation detection algorithm. A more advanced fixation detection algorithm could be implemented in the future to improve the preprocessing part of the data analysis. Currently as was discussed in \autoref{sec:analysis:eyetr} the fixation detection algorithm falls short in the case of low sampling rates that WebGazer demonstrates. The algorithm is not able to detect some of the fixations in the data, which would lead to a loss of information. Therefore, clearly the approach chosen by us in the end is not optimal and could be improved in the future.
+The way we assigned the fixations to the stimuli is not optimal as we clearly disregarded the timings of the gaze predictions as well as added some of the gaze points that are from saccades rather than from fixations. Both of the problems could have been solved with a fixation detection algorithm. A more advanced fixation detection algorithm could be implemented in the future to improve the preprocessing part of the data analysis. Currently as was discussed in \autoref{sec:analysis:eyetr} the fixation detection algorithm falls short in the case of low sampling rates that WebGazer demonstrates. The algorithm is unable to detect some fixations in the data, which can lead to a loss of information.
 
 \subsection{Eye Tracking}
 \label{sec:general-discussion:eye-tracking}
