--- a/tex/sections/introduction.tex
+++ b/tex/sections/introduction.tex
@@ -1,21 +1,21 @@
 \section*{Introduction} \label{sec:intro}
-If one says ``I am going to Munich this week. My mother lives there.'', you will interpret this as meaning they are visiting their mother, even though it is not explicitly stated. This is called an implicature, without explicitly stating something one can still deliver the information. Human communication is full of such implicit constructions. One reason for this may be to save cognitive effort. What rules do people unconsciously follow during communication to make it more efficient?
+If one says ``I am going to Munich this week. My mother lives there.'', you will interpret this as meaning they are visiting their mother, even though it is not explicitly stated. This is called an implicature: even without explicitly stating something, one can still convey the information. Human communication is full of such implicit constructions. One reason for this may be to save cognitive effort. What rules do people unconsciously follow during communication to make it more efficient?
 
-In 1975 a British philosopher Paul Grice finalized four types of maxims \citep{Grice_1975}. Maxim of Quantity: Provide as much information as required, do not provide more information than required. Maxim of Quality: Be truthful, only say that for which you have adequate evidence. Maxim of Relation: be relevant. Maxim of Manner: avoid ambiguity. Going back to the example with traveling, we can assume a speaker is obeying the maxims. Therefore, the information is relevant and the right amount is provided, so the second sentence about where the mother lives is not just a disconnected fact. Hence, we build an implicature that one is visiting their mother.
+In 1975, the British philosopher Paul Grice formulated four types of maxims \citep{Grice_1975}. Maxim of Quantity: Provide as much information as required, but no more. Maxim of Quality: Be truthful, only say that for which you have adequate evidence. Maxim of Relation: be relevant. Maxim of Manner: avoid ambiguity. Returning to the travel example, we can assume a speaker is obeying the maxims. Therefore, the information is relevant and the right amount is provided, so the second sentence about where the mother lives is not just a disconnected fact. Hence, we build an implicature that one is visiting their mother.
 
-One way to study this is through reference games. In these games, participants engage in a collaborative task, often involving the identification or description of objects, where effective communication and reasoning play key roles. Over the years, these reference games have become a popular experimental paradigm to explore how individuals reason about others' intentions and strategies in communication \citep{Frank_2012,Franke_2016}. A simple example is presented in \autoref{fig:intro_complex}. Imagine someone is talking to you and uses the word ``blue'' to refer to one of these objects. Which object are they talking about? If you answered blue square, congrats, it is considered the correct solution. Do not worry, if you are confused. If we consider the possibilities of the speaker, the two completely unambiguous messages available to them are ``green'' and ``circle''. Hence, if they would have referred to one of the other objects, there are clear messages to do that. Thus, we are left with messages ``blue'' and ``square''. Although the message ``blue'' corresponds to two objects, the blue circle can be referred to unambiguously by using message ``circle''. Similar logic can be applied to the message ``square''. So both of them can be inferred to point to the blue square. All this reasoning is built upon the Gricean maxims, as we expect from the speaker to be as concise, unambiguous, relevant and truthful as they can be. 
+One way to study this is through reference games. In these games, participants engage in a collaborative task, often involving the identification or description of objects, where effective communication and reasoning play key roles. Over the years, these reference games have become a popular experimental paradigm to explore how individuals reason about others' intentions and strategies in communication \citep{Frank_2012,Franke_2016}. A simple example is presented in \autoref{fig:intro_complex}. Imagine someone is talking to you and uses the word ``blue'' to refer to one of these objects. Which object are they talking about? If you answered blue square, congrats, it is considered the correct solution. It is understandable if this seems confusing at first. If we consider the possibilities of the speaker, the two completely unambiguous messages available to them are ``green'' and ``circle''. Hence, if they would have referred to one of the other objects, there are clear messages to do that. Thus, we are left with messages ``blue'' and ``square''. Although the message ``blue'' corresponds to two objects, the blue circle can be referred to unambiguously by using message ``circle''. Similar logic can be applied to the message ``square''. Thus, both can be inferred to refer to the blue square. All this reasoning is built upon the Gricean maxims, as we expect from the speaker to be as concise, unambiguous, relevant and truthful as they can be. 
 
 On the other hand, one could notice that the reference games are not as intuitive as the traveling example. It is still a limitation that we will have to keep for now. And this study could also shed light on this problem by understanding what exactly people are doing to solve this kind of problems.
 
 In order to deepen the understanding, a formal model was developed, it is called Rational Speech Act model. It tries to mimic a recursive sequence of reasoning between speaker and listener \citep{Franke_2016}. Despite significant progress in understanding the cognitive processes underlying these tasks, much remains unknown about the specific strategies individuals employ when solving particular problems within these games.
 
-This study seeks to expand on prior research by incorporating a novel dimension: tracking participants' eye gaze during reference games. Eye gaze offers valuable insight into how people process information, make decisions, and employ strategies. By capturing where and when participants direct their attention, we can gain a deeper understanding of the cognitive mechanisms at play, including how individuals prioritize certain visual cues and how these cues influence their reasoning strategies. This approach has shown to be a very insightful tool \citep{Vigneau_2006}.
+This study seeks to expand on prior research by incorporating a novel dimension: tracking participants' eye gaze during reference games. Eye gaze offers valuable insight into how people process information, make decisions, and employ strategies. By capturing where and when participants direct their attention, we can gain a deeper understanding of the cognitive mechanisms at play, including how individuals prioritize certain visual cues and how these cues influence their reasoning strategies. This approach has proven to be a very insightful tool \citep{Vigneau_2006}.
 
-In particular, this study aims to answer the question: How do gaze patterns correlate with the accuracy and strategies used to solve specific communicative challenges in reference games? By integrating eye-tracking data with the analysis of reasoning in these games, this paper contributes to a richer understanding of the decision-making processes involved in collaborative communication and problem-solving.
+In particular, this study aims to answer the question: \textit{How do gaze patterns correlate with the accuracy and strategies used to solve specific communicative challenges in reference games?} By integrating eye-tracking data with the analysis of reasoning in these games, this paper contributes to a richer understanding of the decision-making processes involved in collaborative communication and problem-solving.
 
 \begin{figure}
     \centering
     \includegraphics[width=0.6\linewidth]{images/intro_complex.png}
-    \caption{An example of reference game. Same example is shown in \cite{Frank_2012}. A speaker utters ``blue'', which object are they referring to?}
+    \caption{An example of reference game. The same example also appears in \cite{Frank_2012}. A speaker utters ``blue'', which object are they referring to?}
     \label{fig:intro_complex}
 \end{figure}
